# fresnel

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.claude/skills/cloud-setup/: SKILL.md
.claude/skills/cloud-train/: SKILL.md  pre-flight.md
.claude/skills/cvs-train/: SKILL.md
.claude/skills/experiment/: SKILL.md
.claude/skills/experiment/templates/: hypothesis.md  learnings.md  results.md
.claude/skills/hypertune/: SKILL.md
.claude/skills/preprocess/: SKILL.md
.claude/skills/train/: SKILL.md  known-good.md
.claude/skills/trellis-gen/: SKILL.md
.claude/skills/upload-data/: SKILL.md
cloud/: CVS_CLOUD_QUICKSTART.md  PRE_FLIGHT_CHECKLIST.md  download_cvs_results.sh  download_results.sh  requirements.txt  setup.sh  train.sh  train_cvs_cloud.sh  upload_cvs_data.sh  upload_data.sh
docs/: CVS_BOOTSTRAP_EXPERIMENT_RESULTS.md  TRAINING_HOWTO.md  TROUBLESHOOTING.md  cloud-training.md  fresnel-v2.md
docs/research/: 00_index.md  01_neural_radiance_tokens.md  02_fourier_light_fields.md  03_consistency_distillation.md  04_quantum_scene_representation.md  05_hierarchical_neural_hash_primitives.md
experiments/: README.md
experiments/001-cvs-bootstrap/: hypothesis.md  learnings.md  results.md
experiments/002-autotune-v2/: hypothesis.md  learnings.md  results.md
experiments/003-visual-eval-fix/: hypothesis.md  learnings.md  results.md
experiments/004-hfgs-evaluation/: hypothesis.md  learnings.md  results.md
experiments/005-phase-retrieval/: hypothesis.md  learnings.md  results.md
experiments/006-phase-weight-tuning/: hypothesis.md  learnings.md  results.md
experiments/007-novel-view-eval/: hypothesis.md  learnings.md  no_phase_results.json  phase_005_results.json  phase_01_results.json  results.md
experiments/009-multi-pose-training/: hypothesis.md  learnings.md  novel_view_results.json  results.md
experiments/010-view-aware-positions/: eval_results.json  hypothesis.md  learnings.md  results.md
experiments/011-view-aware-training/: eval_results.json  hypothesis.md  learnings.md  results.md
experiments/012-training-speed-fix/: hypothesis.md  results.md
experiments/013-fibonacci-gaussian-splatting/: hypothesis.md  learnings.md  results.md
experiments/014_nca_gaussians/: hypothesis.md  learnings.md  results.md
experiments/015_depth_locked/: hypothesis.md  results.md
models/: .gitignore
scripts/: __init__.py  build.sh  decoder_inference.py  depth_inference.py  differentiable_renderer.py  dinov2_inference.py  download_training_data.py  export_depth_model.py  export_dinov2_model.py  export_physics_decoder.py  fresnel_zones.py  gaussian_decoder_models.py  generate_pseudo_labels.py  preprocess_training_data.py  test_gaussian_decoders.py  test_tiny_depth.py  tiny_depth_model.py  train_gaussian_decoder.py  train_overnight.sh  train_tiny_depth.py  vlm_guidance.py
scripts/distillation/: __init__.py  generate_trellis_data.py  run_trellis_generation.sh  trellis_dataset.py
scripts/evaluation/: compare_decoders.py  novel_view_eval.py
scripts/export/: __init__.py  export_physics_decoder.py
scripts/inference/: __init__.py  cvs_multiview.py  decoder_inference.py  depth_inference.py  dinov2_inference.py  direct_decoder_inference.py
scripts/models/: __init__.py  consistency_view_synthesis.py  differentiable_renderer.py  direct_slat_decoder.py  gaussian_decoder_models.py  nca_gaussian_decoder.py  quality_aware_losses.py
scripts/preprocessing/: __init__.py  generate_pseudo_labels.py  preprocess_training_data.py
scripts/tests/: __init__.py  test_gaussian_decoders.py  test_tiny_depth.py
scripts/training/: __init__.py  auto_tune_legacy.py  auto_tune_v2.py  generate_cvs_bootstrap_data.py  hyperparam_search.py  train_cvs.py  train_direct_decoder.py  train_gaussian_decoder.py  train_tiny_depth.py  visual_eval.py  vlm_evaluator.py
scripts/utils/: __init__.py  depth_dataset.py  vlm_guidance.py
src/: main.cpp
src/core/: image.cpp  image.hpp  pointcloud.cpp  pointcloud.hpp
src/core/compute/: pipeline.cpp  pipeline.hpp  radix_sort.cpp  radix_sort.hpp
src/core/decoder/: gaussian_decoder.cpp  gaussian_decoder.hpp
src/core/depth/: estimator.cpp  estimator.hpp
src/core/features/: feature_extractor.cpp  feature_extractor.hpp
src/core/renderer/: camera.hpp  gaussian.hpp  renderer.cpp  renderer.hpp
src/core/vulkan/: context.cpp  context.hpp
src/viewer/: main.cpp  viewer.cpp  viewer.hpp
tests/: test_depth_estimator.cpp  test_feature_extractor.cpp  test_gaussian_renderer.cpp  test_pointcloud.cpp  test_vulkan_compute.cpp
